argo-rollouts/progressive/blue-green-post-analysis/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-app
  labels:
    app: blue-green-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-green-app
  template:
    metadata:
      labels:
        app: blue-green-app
    spec:
      containers:
      - name: blue-green-app
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        readinessProbe: 
          httpGet:
            path: /color
            port: http
          timeoutSeconds: 5
          periodSeconds: 10
        livenessProbe: 
          httpGet:
            path: /color
            port: http
          timeoutSeconds: 5
          periodSeconds: 10                
        ports:
        - containerPort: 8080
          name: http
  strategy:
    blueGreen:
      autoPromotionEnabled: true
      activeService: blue-green-app
      scaleDownDelaySeconds: 600
      postPromotionAnalysis:
        templates:
        - templateName: baseline-scan
   
---
apiVersion: v1
kind: Service
metadata:
  name: blue-green-app
  labels:
    app: blue-green-app
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: http
    targetPort: http
  selector:
    app: blue-green-app
