argo-rollouts/progressive/blue-green-post-analysis/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-green
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: blue-green-app
          servicePort: http
